--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
     <!-- BOOTSTRAP CSS CDN  -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
     <title>React App</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
